web/css/style.css
:root {
  --primary-light: #8abdff;
  --primary: #6d5dfc;
  --primary-dark: #5b0eeb;
  --white: #FFFFFF;
  --greyLight-1: #E4EBF5;
  --greyLight-2: #c8d0e7;
  --greyLight-3: #bec8e4;
  --greyDark: #9baacf;
}

*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 62.5%;
  overflow-y: scroll;
  background: var(--greyLight-1);
}

@media screen and (min-width: 900px) {
  html {
    font-size: 75%;
  }
}







.table {
  display: table;
}

.name-tag {
  font-size: 1.7rem;
  color: var(--greyDark);
}

.e-name-tag {
  font-size: 1.7rem;
  color: var(--greyDark);
  outline: none;
}

#e-showid {
  color: transparent;
}

.tag {
  display: table-cell;
  font-size: 1.4rem;
  color: var(--greyDark);
  margin: 1.2rem;
  margin-right: 0.4rem;
  vertical-align: top;
}

.scroll-box {
  overflow: hidden;
  overflow-y: scroll;
  height: 42rem;
}

.scroll-box p {
  display: flex;
}

.scroll-box::-webkit-scrollbar {
  width: 12px;
  -webkit-appearance: none;
}

.scroll-box::-webkit-scrollbar-thumb {
  background-color: var(--greyLight-1);
  background: #E4EBF5;
  border-radius: 3rem;
  box-shadow: inset 6.91px 6.91px 15px #D9DFE9, inset -6.91px -6.91px 15px #EFF7FF;
}

.edit-container {
  min-height: 100vh;
  display: none;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  background: var(--greyLight-1);
  overflow: hidden;
}

.create-container {
  min-height: 100vh;
  display: none;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  background: var(--greyLight-1);
  overflow: hidden;
}

.container {
  min-height: 100vh;
  display: none;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  background: var(--greyLight-1);
  overflow: hidden;
}

.main {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Poppins", sans-serif;
  background: var(--greyLight-1);
  overflow: hidden;
}

.components {
  position: relative;
  width: 80rem;
  height: 60rem;
  border-radius: 3rem;
  box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2), -0.2rem -0.2rem 1.8rem var(--white);
  padding: 4rem;
  overflow: hidden;
}

/*  BUTTONS  */


#newbtn {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 4rem;
  margin-bottom: 3rem;
}

#c-savebtn {
  margin-right: 2rem;
}

#e-savebtn {
  margin-right: 2rem;
}

.btn {
  width: 10rem;
  height: 4rem;
  border-radius: 1rem;
  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
  justify-self: center;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: 0.3s ease;
}

.btn-secondary {
  float: right;
  margin-top: 2rem;
  color: var(--greyDark);
}

.btn-secondary:hover {
  color: var(--primary);
}

.btn-secondary:active {
  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
}

.btn p {
  font-size: 1.6rem;
}

/*  FORM  */

.form {
  display: table-cell;
  min-width: 10rem;
  max-width: 60rem;
}

.form-input {
  display: inline-block;
  width: 100%;
  height: fit-content;
  border: none;
  border-radius: 1rem;
  font-size: 1.4rem;
  padding: 0.5rem;
  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
  background: none;
  font-family: inherit;
  color: var(--greyDark);
}

.form-input::-moz-placeholder {
  color: var(--greyLight-3);
}

.form-input:-ms-input-placeholder {
  color: var(--greyLight-3);
}

.form-input::placeholder {
  color: var(--greyLight-3);
}

.form-input:focus {
  outline: none;
  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
}


/* LIST */

#list-holder {
  padding: 2rem;
  overflow: hidden;
  height: 43rem;
  column-count: 2;
  column-fill: auto;
}

#list-holder li {
  padding: 0.5rem;
  color: var(--greyDark);
}

/*  CHIP  */
.chip {
  margin-bottom: 1rem;
  justify-self: center;
  width: 30rem;
  height: 4rem;
  border-radius: 1rem;
  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
  display: flex;
  align-items: center;
}

.chip-icon {
  width: 3rem;
  height: 3rem;
  border-radius: 1rem;
  margin: 0 0 0 0.2rem;
  margin-left: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.8rem;
  color: var(--primary);
}

.text-container {
  justify-content: center;
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
}

.card-text {
  font-size: 1.2rem;
  color: var(--greyDark);
}

.chip-view {
  display: flex;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0 0.5rem;
  display: flex;
  font-size: 1.6rem;
  color: var(--greyLight-3);
  cursor: pointer;
}

.chip-edit {
  width: 1.6rem;
  height: 1.6rem;
  margin: 0 0.5rem;
  display: flex;
  font-size: 1.6rem;
  color: var(--greyLight-3);
  cursor: pointer;
}


/*  SEARCH  */
.search {
  position: relative;
  display: flex;
  align-items: center;
}

.search-input {
  width: 72rem;
  height: 4rem;
  border: none;
  border-radius: 1rem;
  font-size: 1.4rem;
  padding-left: 3.8rem;
  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
  background: none;
  font-family: inherit;
  color: var(--greyDark);
}

.search-input::-moz-placeholder {
  color: var(--greyLight-3);
}

.search-input:-ms-input-placeholder {
  color: var(--greyLight-3);
}

.search-input::placeholder {
  color: var(--greyLight-3);
}

.search-input:focus {
  outline: none;
  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
}

.search-input:focus+.search-icon {
  color: var(--primary);
}

.search-icon {
  height: 2rem;
  position: absolute;
  font-size: 2rem;
  padding: 0 1rem;
  display: flex;
  color: var(--greyDark);
  transition: 0.3s ease;
}

